--- a/PracticalTest02/app/src/main/AndroidManifest.xml
+++ b/PracticalTest02/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticalTest02">
 
-        <activity android:name=".PracticalTest02">
+        <activity android:name=".PracticalTest02MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
